--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cloud_firestore: ^5.6.5
   random_string: ^2.3.1
   fluttertoast: ^8.2.12
+  google_maps_flutter: ^2.5.0
+  google_places_flutter: ^2.0.6
+  geocoding: ^2.1.0
 
 dev_dependencies:
   flutter_test:
