--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   google_places_flutter: ^2.0.6
   geocoding: ^2.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
