--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_places_flutter: ^2.0.6
   geocoding: ^2.1.0
   intl: ^0.20.2
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
