--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBVYcCpnH-NBgbFjnOnJCBhWx9NdRFuTVQ"/>
+        <meta-data android:name="flutter.renderer" android:value="opengl" />
+
     </application>
 
     <!-- Required to query activities that can process text, see:
