--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   geocoding: ^2.1.0
   intl: ^0.20.2
   geolocator: ^11.0.0
+  flutter_polyline_points: ^2.1.0
+  location: ^8.0.0
 
 dev_dependencies:
   flutter_test:
