--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_polyline_points: ^2.1.0
   location: ^8.0.0
   url_launcher: ^6.3.1
+  connectivity_plus: ^6.1.3
 
 dev_dependencies:
   flutter_test:
